@@ -356,8 +356,6 @@ void do(dbh, statement_sv, attr=Nullsv, ...)
 			if (!dbdxst_bind_params(sth, imp_sth, items-2, ax+2))
 				XSRETURN_UNDEF;
 			imp_sth->async_flag = asyncflag;
-			imp_sth->do_tmp_owner = imp_dbh;
-			imp_sth->do_tmp_old_val = imp_dbh->do_tmp_sth;
 			imp_dbh->do_tmp_sth = imp_sth;
 			retval = dbd_st_execute(sth, imp_sth);
 		}
