@@ -8,7 +8,6 @@ https://github.com/bucardo/dbdpg
 (although we prefer using cpan.org)
 
 
-- ShowErrorStatement should work even for "quickexec" do() calls. (RT #120268)
 - Make all tests work when server and/or client encoding is SQL_ASCII
 - Enable native JSON decoding, similar to arrays, perhaps with JSON::PP
 - Allow partial result sets, either via PQsetSingleRowMode or something better
