@@ -2,6 +2,7 @@ Version 3.8.1
 
   - Fix E'' string escape handling on architectures with unsigned chars
     [Github issue #46]
+  - ShowErrorStatement works for "quickexec" do() calls (RT #120268 and Github #44)
 
 Version 3.8.0, released April 25, 2019
 
